# meg

./: .gitignore  README.md  helpers.py  preproc.ipynb  preprocessing.ipynb  pyproject.toml  requirements.txt  rmANOVA.ipynb
_analysis/: plot_clusters.ipynb  rmANOVA.ipynb  sensor_space.ipynb  source_space.ipynb  ttests.ipynb
_preprocessing/: 0_preprocessing.ipynb  1_source_space.ipynb  2_stc_plots.ipynb
environments/: eelbrain.yml  py37.yml
experiments/adj_order/: adj_order.py
experiments/adj_order/config/: adjorder.json
experiments/adj_order/stimuli/: practice.csv  stimuli.csv
experiments/color_green/: color_green.py
experiments/color_green/config/: colorgreen.json
experiments/color_green/stimuli/: practice.csv  stimuli.csv
experiments/hello_world (template)/: hello_world.py  port_open_send.py
experiments/hello_world (template)/config/: hello_world.json
experiments/hello_world (template)/stimuli/: stimuli.csv
preprocessing/: 0_preprocessing.ipynb  1_source_space.ipynb  2_stc_plots.ipynb
